mule-user-guide/v/3.4/starting-and-stopping-mule-esb.adoc
= 启动和停止Mule ESB

[TIP]
====
*For the Impatient*

*Run Mule on Unix*

[source, code, linenums]
----
$MULE_HOME/bin/mule start|stop
----

*Run Mule on Windows*

[source, code, linenums]
----
$MULE_HOME\bin\mule.bat start|stop
----
====

Mule使用 http://wrapper.tanukisoftware.org/[Java服务包装器]从您的本机操作系统控制Java虚拟机（JVM）。包装提供了许多选项和功能，包括将Mule作为Unix守护进程运行或将Mule作为Windows服务安装/删除的能力。包装器可以处理系统信号和启动参数，并且总体上提供了JVM和底层操作系统之间更好的交互。

有关Java服务包装器的更多信息，请参阅 http://wrapper.tanukisoftware.com/doc/english/introduction.html[在线文档]。

== 启动和关闭脚本

包装由`$MULE_HOME/bin`中的脚本调用。

*Unix*：`$MULE_HOME/bin/mule`

*Windows*：`$MULE_HOME\bin\mule.bat`

下表列出了脚本接受的所有参数。

[%header%autowidth.spread]
|===
| {参数{1}}说明
|  `start`  |在终端后台启动Mule ESB服务器。
|  `stop`  |停止Mule ESB服务器。
|  `restart`  |重新启动Mule ESB服务器。
|  `status`  |显示Mule ESB服务器（`running`或`not running`）的状态以及运行时的进程PID。
|  `dump`  |  *(Unix only.)*将Mule包装的核心转储到`$MULE_HOME/log/mule_ee.log`。
|  `console`  |在终端前台启动Mule ESB（控制台模式）。与运行不带参数的`mule`相同。
|  `install`  |  *(Windows only.)*将Mule安装为Windows服务。
|  `remove`  |  *(Windows only.)*从您的Windows服务中删除Mule。
|===

== 通过命令行启动和停止Mule

=== 从后台开始

. 使用`cd`命令导航到`$MULE_HOME/bin`目录。
. 根据以下选项运行启动脚本。

*  **Unix:** `./mule start`
*  *Windows:* `mule.bat start`

或者，不要使用`cd`命令，而要键入脚本的完整路径，例如`/opt/mule/mule-ee-3.4.1/bin/mule start`。

要停止Mule，请使用`stop`参数运行脚本。

=== 从前台开始

. 使用`cd`命令导航到`$MULE_HOME/bin`目录。
. 根据以下选项运行启动脚本。

*  **Unix:** `./mule`
*  **Windows:** `mule`

或者，不要使用`cd`命令，而要键入脚本的完整路径，例如`/opt/mule/mule-ee-3.4.1/bin/mule`。

在前台模式下运行时，启动脚本会显示有关终端标准输出的信息。只要Mule正在运行，您将无法在终端上发出更多命令。

要停止Mule，请在运行脚本的终端中按`CTRL-C`。

== 在启动时将参数传递给Mule

=== 配置文件

默认情况下，Java Service Wrapper会从文件`mule-config.xml`加载配置选项。该文件默认为空;它包含在`$MULE_HOME/apps/default`目录中。

`-config`参数允许您将配置文件作为参数传递给启动脚本。

[source, code, linenums]
----
./mule start -config <file1>[,<file2>,<file3>...]
----

要指定多个配置文件，请将文件包含在逗号分隔列表中。

=== 通过启动命令将参数传递给JVM

包含您的参数作为脚本参数（如果在后台运行，在`start`参数之后），如下所示。如果有多个参数，请用空格分隔参数。

[source, code, linenums]
----
./mule start -M-Dmule.mmc.bind.port=7783-7883
----

=== 通过Wrapper配置文件将参数传递给JVM

将您的参数包含在配置文件`$MULE_HOME/conf/wrapper.conf`中。该发行版包含带有评论的此文件（请参阅下面的片段）。您可以根据需要编辑或添加该文件。有关`wrapper.conf`文件的更多信息，请查阅该文件的Java Service Wrapper http://wrapper.tanukisoftware.com/doc/english/properties.html[在线文档]。

[source, code, linenums]
----
...
# Name of the service
wrapper.ntservice.name=%MULE_APP%
 
# Display name of the service
wrapper.ntservice.displayname=%MULE_APP_LONG%
 
# Description of the service
wrapper.ntservice.description=%MULE_APP_LONG%
 
# Service dependencies.  Add dependencies as needed starting from 1
wrapper.ntservice.dependency.1=
 
# Mode in which the service is installed.  AUTO_START or DEMAND_START
wrapper.ntservice.starttype=AUTO_START
 
# Allow the service to interact with the desktop.
wrapper.ntservice.interactive=false
 
# Do not edit lines below!
wrapper.license.type=DEV
wrapper.license.id=201010160006
wrapper.license.licensee=mulesoft.com
wrapper.license.dev_application=Mule ESB Enterprise Edition
wrapper.license.features=64bit
...
----

== 将Mule作为Unix守护进程运行

要将Mule作为Unix守护进程运行，需要为Mule启动脚本编写一个简单的包装脚本。将包装脚本放在系统的相应目录（如`/etc/init.d`）中，并使用系统的初始脚本体系结构工具来确保您的包装脚本在您希望的运行级别中调用。

你的包装脚本需要设置Mule所需的环境;下面提供了一个示例脚本。

[source, code, linenums]
----
#!/bin/bash
 
# Set JDK related environment
JAVA_HOME=<path to JDK>
PATH=$PATH:$JAVA_HOME/bin
 
# Set Mule related environment
MULE_HOME=<path to Mule>
MULE_LIB=<path to application specific libraries>
PATH=$PATH:$MULE_HOME/bin
 
# Export environment variables
export JAVA_HOME MULE_HOME MULE_LIB PATH
 
# Invoke Mule
$MULE_HOME/bin/mule $1 -config <path to mule-conf.xml>
----

在某些系统上，您可以设置启动脚本以用于`service`实用程序（System V）。有关详细信息，请参阅操作系统的文档。

== 将Mule作为Windows服务运行

要将Mule安装为Windows服务，请转至`$MULE_HOME/bin/`目录，然后发出以下命令：

[source, code, linenums]
----
mule install
----

要从Windows服务中删除Mule，请转到`$MULE_HOME/bin/`目录，然后运行：

[source, code, linenums]
----
mule remove
----

一旦Mule作为服务安装，您可以使用以下命令来控制它：

[source, code, linenums]
----
mule start|restart|stop
----
  
要使用其他配置启动Mule，请执行以下操作：

[source, code, linenums]
----
mule start -config <your-config-file.xml>
----
  
一旦Mule作为服务安装，您也可以使用Windows `net`实用程序启动或停止它：

[source, code, linenums]
----
net start|stop mule
----

== 共同参数

下表列出了Mule常用的一些参数，这些参数未在`wrapper.conf`配置文件中进行说明。

[%header%autowidth.spread]
|===
| {参数{1}}说明
管理控制台代理（默认情况下启用）启动Mule ESB。{} `-M-Dmule.agent.enabled`
| `-M-Dmule.mmc.bind.port`  |指定管理控制台绑定到的Mule ESB代理侦听器的端口或端口范围。要指定端口范围，请使用`<port>-<port>`，例如`3000-3010`。
|===

`$MULE_HOME/conf/wrapper.conf`配置文件包含更多参数，其中一些默认已注释掉，但在注释中进行了记录。

== 另请参阅

*  *NEXT STEP:*从第 link:/mule-user-guide/v/3.4/mule-application-architecture[Mule应用程序架构]开始，以Mule章节为第一周的内容进行研究。
